--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,6 @@
 PORT=3333
 NODE_ENV=development
 CORS_ORIGINS=http://localhost:5173
+JWT_SECRET=dev-secret
+# Pode ser número (segundos) ou formato ms compatível, ex: "1h"
+JWT_EXPIRES_IN=3600
