--- a/backend/package.json
+++ b/backend/package.json
@@ -14,13 +14,18 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3",
+    "ms": "^2.1.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
+  "@types/express": "^4.17.21",
+  "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^22.10.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
