fix: corrigir estilização frontend e adicionar persistência de sessão
- Restaurar CSS Tailwind 4 pré-compilado (index.css)
- Remover configs Tailwind 3 desnecessários (postcss.config.js, tailwind.config.js)
- Atualizar vite.config.ts com aliases corretos
- Adicionar componentes UI faltantes
- Implementar endpoint /auth/me para verificar token
- Adicionar lógica de persistência de sessão no App.tsx
- Manter sessão ativa após refresh (F5)

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -29,8 +29,8 @@ DB_PORT=3306
 # Usuário do banco de dados
 DB_USER=root
 
-# Senha do banco de dados
-DB_PASSWORD=sua_senha_aqui
+# Senha do banco de dados (ALTERE PARA SUA SENHA!)
+DB_PASSWORD=
 
 # Nome do banco de dados
 DB_DATABASE=nami_gestao
