--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
+    "moduleResolution": "Node",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -13,6 +13,6 @@
     "types": ["node"],
     "baseUrl": "./src"
   },
-  "include": ["src/**/*", "database/database.ts"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
 }
